# UVAtlas

./: .gitignore  CMakeLists.txt  Readme.txt
UVAtlas/: CMakeLists.txt  UVAtlas_2017_Win10.vcxproj  pch.h
UVAtlas/inc/: JntLinuxTypes.h  UVAtlas.h  UVAtlasTypes.h
UVAtlas/inc/UVAtlas/: JntLinuxTypes.h  UVAtlas.h
UVAtlas/isochart/: SymmetricMatrix.hpp  UVAtlas.cpp  UVAtlasRepacker.cpp  isochart.h  isochartengine.cpp  isochartengine.h  isochartutil.cpp  isochartutil.h  mergecharts.cpp  meshoptimizestretch.cpp  meshpartitionchart.cpp  packingcharts.cpp
UVAtlas/linux/: UVAtlasTypes.h
UVAtlasTool/: Mesh.cpp  UVAtlas.cpp
